# app/src/controllers/generalProject.ts
@@ -6,15 +6,14 @@ import {
   getGeneralProjectStatisticsService,
   listGeneralProjectActivityIdsService,
   listGeneralProjectsService,
+  patchGeneralProjectService,
   searchGeneralProjects,
-  submitGeneralProjectDraftService,
-  updateGeneralProjectService
+  submitGeneralProjectDraftService
 } from '../services/generalProject.ts';
 import { Initiative } from '../utils/enums/application.ts';
 import { DraftCode } from '../utils/enums/projectCommon.ts';
 import { isTruthy } from '../utils/utils.ts';
 
-import type { Prisma } from '@prisma/client';
 import type { Request, Response } from 'express';
 import type {
   Draft,
@@ -22,6 +21,7 @@ import type {
   GeneralProjectIntake,
   GeneralProjectSearchParameters,
   LocalContext,
+  PatchGeneralProjectRequest,
   StatisticsFilters
 } from '../types/index.ts';
 
@@ -76,16 +76,11 @@ export const searchGeneralProjectsController = async (
   res.status(200).json(response);
 };
 
-export const updateGeneralProjectController = async (
-  req: Request<{ generalProjectId: string }, never, Omit<Prisma.general_projectUpdateInput, 'generalProjectId'>>,
+export const patchGeneralProjectController = async (
+  req: Request<{ generalProjectId: string }, never, PatchGeneralProjectRequest>,
   res: Response
 ) => {
-  const response = await updateGeneralProjectService(
-    {
-      ...req.body
-    },
-    req.params.generalProjectId
-  );
+  const response = await patchGeneralProjectService(req.params.generalProjectId, req.body);
   res.status(200).json(response);
 };
 
