# app/src/controllers/housingProject.ts
@@ -6,15 +6,14 @@ import {
   getHousingProjectStatisticsService,
   listHousingProjectActivityIdsService,
   listHousingProjectsService,
+  patchHousingProjectService,
   searchHousingProjects,
-  submitHousingProjectDraftService,
-  updateHousingProjectService
+  submitHousingProjectDraftService
 } from '../services/housingProject.ts';
 import { BasicResponse, Initiative } from '../utils/enums/application.ts';
 import { DraftCode } from '../utils/enums/projectCommon.ts';
 import { isTruthy } from '../utils/utils.ts';
 
-import type { Prisma } from '@prisma/client';
 import type { Request, Response } from 'express';
 import type {
   Draft,
@@ -23,6 +22,7 @@ import type {
   HousingProjectSearchParameters,
   HousingProjectStatistics,
   LocalContext,
+  PatchHousingProjectRequest,
   StatisticsFilters
 } from '../types/index.ts';
 
@@ -80,22 +80,19 @@ export const searchHousingProjectsController = async (
   res.status(200).json(response);
 };
 
-export const updateHousingProjectController = async (
-  req: Request<{ housingProjectId: string }, never, Omit<Prisma.housing_projectUpdateInput, 'housingProjectId'>>,
+export const patchHousingProjectController = async (
+  req: Request<{ housingProjectId: string }, never, PatchHousingProjectRequest>,
   res: Response
 ) => {
-  const response = await updateHousingProjectService(
-    {
-      ...req.body,
-      financiallySupported: [
-        req.body.financiallySupportedBc,
-        req.body.financiallySupportedIndigenous,
-        req.body.financiallySupportedNonProfit,
-        req.body.financiallySupportedHousingCoop
-      ].includes(BasicResponse.YES)
-    },
-    req.params.housingProjectId
-  );
+  const response = await patchHousingProjectService(req.params.housingProjectId, {
+    ...req.body,
+    financiallySupported: [
+      req.body.financiallySupportedBc,
+      req.body.financiallySupportedIndigenous,
+      req.body.financiallySupportedNonProfit,
+      req.body.financiallySupportedHousingCoop
+    ].includes(BasicResponse.YES)
+  });
   res.status(200).json(response);
 };
 
