# app/src/types/api/requests.ts
@@ -1,10 +1,98 @@
 import type { ParsedQs } from 'qs';
-import type { DeleteRequestDTO, GetRequestDTO, ListRequestDTO, ResourceSchemaConfig, UpsertRequestDTO } from './dto.ts';
-import type { Permit, PermitBase, Stamps } from './resources.ts';
+import type {
+  DeleteRequestDTO,
+  GetRequestDTO,
+  ListRequestDTO,
+  PatchRequestDTO,
+  ResourceSchemaConfig,
+  UpsertRequestDTO
+} from './dto.ts';
+import type {
+  ElectrificationProjectBase,
+  EnquiryBase,
+  GeneralProjectBase,
+  HousingProjectBase,
+  Permit,
+  PermitBase,
+  Stamps
+} from './resources.ts';
 import type { PaginationOptions } from '../common.ts';
 import type { Nullable } from '../utils.ts';
 import type { GroupName, Initiative } from '../../utils/enums/application.ts';
 import type { EmailTemplate } from '../../utils/templates';
+
+/**
+ * Electrification Project
+ */
+
+interface ElectrificationProjectBaseSchema extends ResourceSchemaConfig<ElectrificationProjectBase> {
+  ids: 'electrificationProjectId';
+  immutable: 'activityId' | 'electrificationProjectId';
+  serverGenerated: 'activityId' | 'electrificationProjectId';
+  query: {
+    activityId: string[];
+    createdBy: string[];
+    includeUser: boolean;
+    electrificationProjectId: string[];
+    projectType: string[];
+    projectCategory: string[];
+  };
+}
+
+export type PatchElectrificationProjectRequest = PatchRequestDTO<
+  ElectrificationProjectBase,
+  ElectrificationProjectBaseSchema
+>;
+
+/**
+ * Enquiry
+ */
+
+interface EnquiryBaseSchema extends ResourceSchemaConfig<EnquiryBase> {
+  ids: 'enquiryId';
+  immutable: 'activityId' | 'enquiryId';
+  serverGenerated: 'activityId' | 'enquiryId';
+}
+
+export type PatchEnquiryRequest = PatchRequestDTO<EnquiryBase, EnquiryBaseSchema>;
+
+/**
+ * General Project
+ */
+
+interface GeneralProjectBaseSchema extends ResourceSchemaConfig<GeneralProjectBase> {
+  ids: 'generalProjectId';
+  immutable: 'activityId' | 'generalProjectId';
+  serverGenerated: 'activityId' | 'generalProjectId';
+  query: {
+    activityId: string[];
+    createdBy: string[];
+    includeUser: boolean;
+    generalProjectId: string[];
+    submissionType: string[];
+  };
+}
+
+export type PatchGeneralProjectRequest = PatchRequestDTO<GeneralProjectBase, GeneralProjectBaseSchema>;
+
+/**
+ * Housing Project
+ */
+
+interface HousingProjectBaseSchema extends ResourceSchemaConfig<HousingProjectBase> {
+  ids: 'housingProjectId';
+  immutable: 'activityId' | 'housingProjectId';
+  serverGenerated: 'activityId' | 'housingProjectId';
+  query: {
+    activityId: string[];
+    createdBy: string[];
+    includeUser: boolean;
+    housingProjectId: string[];
+    submissionType: string[];
+  };
+}
+
+export type PatchHousingProjectRequest = PatchRequestDTO<HousingProjectBase, HousingProjectBaseSchema>;
 
 /**
  * Permit
